--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <title>Login and Registration</title>
     <script src="angular/angular.js" charset="utf-8"></script>
     <script src="angular-route/angular-route.js" charset="utf-8"></script>
+    <script src="angular-messages/angular-messages.js" charset="utf-8"></script>
+    <script src = 'angular-cookies/angular-cookies.js'></script>
     <script src="assets/app.js" charset="utf-8"></script>
     <script src="assets/controllers/loginController.js" charset="utf-8"></script>
     <script src="assets/factories/usersFactory.js" charset="utf-8"></script>
